2003-10-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/SmartPtr.h: Modified explicit casts so they are
	  easier to use.

	* Atlas/Objects/GenerateDispatcher.py: Updated usage of casts in
	  Atlas::Objects::Dispatcher.

2003-10-27  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/loadDefaults.cpp: Modify LoadDefaultsDecoder
	  so it no longer uses Dispatcher, which it didn't really require
	  anyway. Tweak the API and its usage for efficiency.

2003-10-26  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/GenerateDispatcher.py: Final attempt to get
	  OSX's weird gcc to take this code.

2003-10-14  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/GenerateForward.py: Make forward header a true
	  forward header by forward declaring SmartPtr instead of
	  including SmartPtr.h.

2003-08-10  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Message/Element.h: Add an explicit operator!= for gccs 
	  before 3, which get confused by the template version.

2003-08-10  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/GenerateDispatcher.py: Correctness tweak
	  of the way data class member is generated.

	* Atlas/Objects/GenerateForward.py, Atlas/Objects/gen_cpp.py:
	  Add code to generate a forward declarations header which
	  includes forward declarations for most of the classes
	  in the Objects namespace, and the related typedefs.

	* tests/Objects/objects_fwd.cpp: A check to ensure the contents
	  of the forward header are valid and correct.

2003-08-08  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/GenerateDispatcher.py: Use insert to
	  add new dispatch methods.

2003-08-08  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Net/Stream.cpp: Enclose debugging output with a macro.

2003-08-06  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/SmartPtr.h: Fix null pointer checks.

	* Atlas/Net/Stream.h, Atlas/Net/Stream.cpp: Remove filter
	  stage from negotiation state.

2003-08-03  Ron Steinke <rsteinke@w-link.net>
